# griffe-scikit-build-core-bug

./: CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
docs/: compiled.md  purepython.md
scripts/: use_griffe.py
src/: main.cpp
src/griffedemo/: __init__.py  _core.pyi
src/griffedemo/purepython/: __init__.py
